# llun

./: Cargo.toml  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: cicd.yaml  copilot-instructions.md
.github/workflows/: main.yml  release_binaries.yml
docs/: CHANGELOG.md  DECISIONS.md  IDEAS.md
dull/: Cargo.toml
dull/data/: default_rules.txt
dull/src/: api_client.rs  data.rs  main.rs  models.rs
dull/src/api_client/: llm_provider.rs  openai_public_client.rs  prompt_manager.rs
dull/src/data/prompts/: response_schema.json  system_prompt.txt
dull/src/files/: file_manager.rs
dull/src/models/: mod.rs  rule.rs  rule_manager.rs  ruleset.rs
dull/src/rules/: rule_manager.rs
llun_cli/: Cargo.toml
llun_cli/src/: main.rs
llun_core/: Cargo.toml
llun_core/src/: lib.rs
llun_mcp/: Cargo.toml  README.md  pyproject.toml
llun_mcp/src/: lib.rs  main.rs
npm/llun-mcp/: install.js  package.json
prototype/dull/: config.py
prototype/dull/config_managers/: file_manager.py
prototype/dull/data/: default_rules.txt  user_prompt.txt
prototype/dull/rules/: DULL01.json  DULL09.json  DULL10.json
python/tynnu/: __init__.py  cli.py
scripts/: create_rule.py
src/: api_client.rs  data.rs  formatters.rs  lib.rs  main.rs  output_formatter.rs  per_file_ignorer.rs
src/api_client/: available_scanner.rs  openai_public_client.rs  openai_public_scanner.rs  openai_scanner.rs  prompt_manager.rs  response.rs  scanner.rs  scanner_manager.rs
src/data/: default.toml  default_llun.toml  default_rules.txt
src/data/prompts/: system_prompt.txt  user_prompt.txt  user_prompt_consistency.txt
src/data/rules/: LLUN03.json  LLUN04.json  LLUN06.json  LLUN07.json  LLUN08.json  LLUN09.json  LLUN10.json  LLUN11.json  LLUN12.json  LLUN13.json  LLUN14.json  LLUN15.json  LLUN16.json  LLUN17.json  LLUN18.json  LLUN19.json  RHEOL01.json  RHEOL02.json  RHEOL05.json
src/dull/: __main__.py  _prompts.py  _types.py  config.py  config_manager.py  openai_client.py  rule_registry.py
src/dull/config_managers/: __init__.py  file_manager.py  rule_manager.py  toml_manager.py
src/dull/data/: prompts.py  system_prompt.py  system_prompt.txt
src/dull/prompts/: README.md  response_schema.json  system.py
src/dull/rules/: DULL07.json  DULL08.json  DULL11.json  DULL12.json  DULL13.json  README.md
src/files/: file_manager.rs  file_set.rs
src/formatters/: output_format.rs  output_manager.rs  summary_formatter.rs
src/output_formatter/: azure_formatter.rs  format_manager.rs  json_formatter.rs  junit_formatter.rs  output_format.rs  output_manager.rs  stack_trace_formatter.rs
src/rules/: rule.rs  rule_manager.rs  rule_set.rs
