[package]
name = "tynnu"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "tynnu"
path = "src/main.rs"

[lib]
name = "tynnu"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs" 

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7.4"
serde_json = "1.0"
thiserror = "2.0.16"
schemars = "1.0.4"
async-openai = "0.29.3"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
pyo3 = { version = "0.26.0", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.26.0"

[tool.maturin]
python-source = "python"
module-name = "tynnu.tynnu"
