[package]
name = "llun"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "llun"
path = "src/main.rs"

[lib]
name = "llun"
crate-type = ["cdylib", "rlib"]
path = "src/main.rs" 

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7.4"
serde_json = "1.0"
thiserror = "2.0.16"
schemars = "1.0.4"
async-openai = "0.29.3"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
figment = { version = "0.10.19", features = ["toml"] }
ignore = "0.4.23"

[tool.maturin]
python-source = "python"
module-name = "llun.llun"
