[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tynnu"
dynamic = ["version"]
description = "A linter for architecture and abstraction"
authors = [{ name = "John C Ll Stokes", email = "johnclstokes@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
    "automation",
    "ruff",
    "cli",
    "rust",
    "architecture",
    "ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",  # for compatibility with tooling such as pip-licenses
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
tynnu = "tynnu.cli:main"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "tynnu"
python-source = "python"
strip = true
