[package]
name = "llun_mcp"
version = "1.3.1"
edition = "2024"

[[bin]]
name = "llun"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "0.2.0", features = ["client", "macros", "schemars", "server", "transport-io"] }
llun_core = { path = "../llun_core" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = "1.47.1"
schemars = "1.0.4"
figment = { version = "0.10.19", features = ["toml"] }
